[HxGrid] squashing the table-container div with HxProgressIndicator - CSS isolation fix

--- a/Havit.Blazor.Components.Web.Bootstrap/Grids/HxGrid.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Grids/HxGrid.razor.css
@@ -6,7 +6,7 @@
     visibility: hidden;
 }
 
-::deep .hx-grid-infinite-scroll {
+.hx-grid-infinite-scroll {
 	white-space: nowrap;
 }
 
